# AutoEMA

./: LICENSE  README.ipynb  README.md  example_simulated_3dof.py  pyproject.toml  requirements.txt  setup.py
AutoEMA/: AutoEMA.py
example/: example_simulated_3dof.py
src/: AutoEMA.py
tests/: test.py  test_save_load.py
